conformance/tests/mesh-consumer-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mesh-echo-add-header
  namespace: gateway-conformance-mesh-consumer
spec:
  parentRefs:
  - kind: Service
    group: core
    name: echo-v1
    namespace: gateway-conformance-mesh
    port: 80
  rules:
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Header-Set
          value: set
    backendRefs:
    - name: echo-v1
      namespace: gateway-conformance-mesh
      port: 80
